fix text align

--- a/src/views/ResetPassword/styles.module.scss
+++ b/src/views/ResetPassword/styles.module.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px 0;
+  text-align: center;
 
   .Card {
     display: flex;
